# rust-magic-sys

./: .gitignore  .gitmodules  Cargo.toml  Makefile.deb  build.rs  index.html  search-index.js
.cargo/: config.toml
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js
magic_sys/: enum.Magic.html  fn.magic_buffer.html  fn.magic_check.html  fn.magic_close.html  fn.magic_compile.html  fn.magic_descriptor.html  fn.magic_errno.html  fn.magic_error.html  fn.magic_file.html  fn.magic_list.html  fn.magic_load.html  fn.magic_open.html  fn.magic_setflags.html  index.html  sidebar-items.js
src/magic_sys/src/: lib.rs.html
