[package]
name = "magic-sys"
description = "Declarations for the `libmagic` C library"
keywords = ["magic", "file", "ffi", "bindings"]
categories = ["external-ffi-bindings", "no-std"]
repository = "https://github.com/robo9k/rust-magic-sys.git"
license = "MIT/Apache-2.0"
version = "0.3.0"
authors = ["robo9k <robo9k@symlink.io>", "Ahmed Masud <ahmed.masud@saf.ai>"]
links = "magic"
exclude = [
  ".gitignore",
  ".gitattributes",
  "/.github/",
  "/.vscode/",
  "rust-toolchain.toml",
  "shell.nix",
  "nix/",
  "deny.toml",
]
edition = "2018"
[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["v5-38"]
v5-04 = []
v5-05 = ["v5-04"]
v5-10 = ["v5-05"]
v5-13 = ["v5-10"]
v5-20 = ["v5-13"]
v5-21 = ["v5-20"]
v5-22 = ["v5-21"]
v5-23 = ["v5-22"]
v5-25 = ["v5-23"]
v5-27 = ["v5-25"]
v5-32 = ["v5-27"]
v5-35 = ["v5-32"]
v5-38 = ["v5-35"]
v5-40 = ["v5-38"]

[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "078f3e5"
dependencies = ["libmagic"]

[dependencies.libc]
version = "0.2.104"
default-features = false

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata]
msrv = "1.38.0"

[package.metadata.docs.rs]
all-features = true
targets = []


[package.metadata.deb]
name = "resiliate-magic"
maintainer = "Ahmed Masud <ahmed.masud@saf.ai>"
extended-description = "Declarations for the `libmagic` C library with augmentations for resiliate"
section = "libs"
priority = "required"
replaces = "file"
assets = [
  [
    "file/dist/usr/lib/libmagic.la",
    "usr/lib/libmagic.la",
    "0444",
  ],
  [
    "file/dist/usr/lib/libmagic.a",
    "usr/lib/libmagic.a",
    "0555",
  ],
  [
    "file/dist/usr/lib/pkgconfig/libmagic.pc",
    "usr/lib/pkgconfig/libmagic.pc",
    "0444",
  ],
  [
    "file/dist/usr/bin/file",
    "usr/bin/file",
    "0555",
  ],
  [
    "file/dist/usr/include/magic.h",
    "usr/include/magic.h",
    "0444",
  ],
  [
    "file/dist/usr/share/misc/magic.mgc",
    "usr/share/misc/magic.mgc",
    "0444",
  ],
  [
    "file/dist/usr/share/man/man1/file.1",
    "usr/share/man/man1/file.1",
    "0444",
  ],
  [
    "file/dist/usr/share/man/man3/libmagic.3",
    "usr/share/man/man3/libmagic.3",
    "0555",
  ],
  [
    "file/dist/usr/share/man/man4/magic.4",
    "usr/share/man/man4/magic.4",
    "0444",
  ],
]

provides = "file"
